VM tests: added new files

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -5,6 +5,7 @@
 # TODO: resolve testFor.rb, testForEach.rb , may duplicate other tests
 # testFor.rb
 # testForEach.rb
+FixedRegressions.rb
 ArgsTest.rb
 ArrayTest.rb
 testBlockArgs1.rb
