Use real include for Module, Kernel. Adjust Globals.rb for new globals code . Class.new now works. Implement catch,throw in Kernel. Add a bunch of stub methods in Module . webrick now loads

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -4,6 +4,13 @@
 # TODO: resolve testFor.rb, testForEach.rb , may duplicate other tests
 # testFor.rb
 # testForEach.rb
+testGlobals1.rb
+testGlobals2.rb
+testGlobals3.rb
+testGlobals4.rb
+testGlobals5.rb
+testGlobals6.rb
+testGlobals7.rb
 FixedRegressions.rb
 ArgsTest.rb
 ArrayTest.rb
@@ -26,12 +33,6 @@ WhileTest.rb
 HashTest.rb
 PutsTest.rb
 #
-testGlobals1.rb
-testGlobals3.rb
-testGlobals4.rb
-testGlobals5.rb
-testGlobals6.rb
-testGlobals7.rb
 testBlockGiven.rb
 testMassign.rb
 testProc.rb
@@ -58,5 +59,7 @@ FileStatTest.rb
 testPrintf.rb
 EnvTest.rb
 DirTest.rb
-test_require.rb
+# test_require.rb
 ClassTest.rb
+class_vars.rb
+classes_simple.rb
