--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -11,6 +11,7 @@ testGlobals4.rb
 testGlobals5.rb
 testGlobals6.rb
 testGlobals7.rb
+testGlobals8.rb
 FixedRegressions.rb
 ArgsTest.rb
 ArrayTest.rb
