--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -60,10 +60,11 @@ FileStatTest.rb
 testPrintf.rb
 EnvTest.rb
 DirTest.rb
-# test_require.rb
+test_require.rb
 ClassTest.rb
 class_vars.rb
 classes_simple.rb
+RbConfigTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac239.rb
