--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -65,6 +65,7 @@ ClassTest.rb
 class_vars.rb
 classes_simple.rb
 RbConfigTest.rb
+KernelTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac239.rb
