--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -66,6 +66,7 @@ class_vars.rb
 classes_simple.rb
 RbConfigTest.rb
 KernelTest.rb
+RangeTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac239.rb
