Tests for the Type.coerce* functions

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -67,6 +67,7 @@ classes_simple.rb
 RbConfigTest.rb
 KernelTest.rb
 RangeTest.rb
+TypeTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac239.rb
