Added ModuleTest.rb to vmunit.conf

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -68,6 +68,7 @@ RbConfigTest.rb
 KernelTest.rb
 RangeTest.rb
 TypeTest.rb
+ModuleTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
