Reduce GEM_MAX_SMALLTALK_STACK_DEPTH from 1M to 10K for development

--- a/etc/system-debug.conf
+++ b/etc/system-debug.conf
@@ -31,7 +31,7 @@ DBF_SCRATCH_DIR = $MAGLEV_HOME/data/;
 #   in units of approximate number of method activations. 
 #   Causes heap memory allocation of approximately 64 bytes per activation.
 # Default: 1000 min: 100 max: 1000000
-GEM_MAX_SMALLTALK_STACK_DEPTH = 1000000;
+GEM_MAX_SMALLTALK_STACK_DEPTH = 10000;
 
 #=========================================================================
 # GEM_NATIVE_CODE_ENABLED
