--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -60,7 +60,7 @@ FileStatTest.rb
 testPrintf.rb
 EnvTest.rb
 DirTest.rb
-# test_require.rb
+test_require.rb
 ClassTest.rb
 class_vars.rb
 classes_simple.rb
