--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -71,12 +71,17 @@ TypeTest.rb
 testDynamicIvs.rb
 ModuleTest.rb
 ErrnoTest.rb
+StructTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
 Trac239.rb
 Trac243.rb
 Trac244.rb
+Trac246.rb
 Trac249.rb
+# Trac250.rb
 Trac257.rb
+# Trac258.rb
+Trac260.rb
 Trac263.rb
