Reduce max stack depth to 10000 and raise temp obj mem from 100M to 150M

--- a/etc/system.conf
+++ b/etc/system.conf
@@ -31,8 +31,7 @@ DUMP_OPTIONS = FALSE;
 #   in units of approximate number of method activations.
 #   Causes heap memory allocation of approximately 64 bytes per activation.
 # Default: 1000 min: 100 max: 1000000
-#GEM_MAX_SMALLTALK_STACK_DEPTH = 1000000;
-GEM_MAX_SMALLTALK_STACK_DEPTH = 10000;  # TODO: put back to 1M for production
+# GEM_MAX_SMALLTALK_STACK_DEPTH = 1000;
 
 #=========================================================================
 # GEM_NATIVE_CODE_ENABLED
@@ -133,6 +132,7 @@ STN_TRAN_LOG_SIZES = 100, 100;
 # Settings for Ruby development
 #
 
+GEM_MAX_SMALLTALK_STACK_DEPTH = 15000;
 GEM_TEMPOBJ_SCOPES_SIZE = 20000;
-GEM_TEMPOBJ_CACHE_SIZE = 100000;
+GEM_TEMPOBJ_CACHE_SIZE = 150000;
 KEYFILE = $MAGLEV_HOME/etc/maglev.demo.key;
