--- a/etc/system-debug.conf
+++ b/etc/system-debug.conf
@@ -31,7 +31,7 @@ DBF_SCRATCH_DIR = $MAGLEV_HOME/data/;
 #   in units of approximate number of method activations. 
 #   Causes heap memory allocation of approximately 64 bytes per activation.
 # Default: 1000 min: 100 max: 1000000
-GEM_MAX_SMALLTALK_STACK_DEPTH = 10000;
+# GEM_MAX_SMALLTALK_STACK_DEPTH = 1000;
 
 #=========================================================================
 # GEM_NATIVE_CODE_ENABLED
@@ -132,6 +132,7 @@ STN_TRAN_LOG_SIZES = 100, 100;
 # Settings for Ruby development
 #
 
+GEM_MAX_SMALLTALK_STACK_DEPTH = 15000;
 GEM_TEMPOBJ_SCOPES_SIZE = 20000;
-GEM_TEMPOBJ_CACHE_SIZE = 100000;
+GEM_TEMPOBJ_CACHE_SIZE = 150000;
 KEYFILE = $MAGLEV_HOME/etc/maglev.demo.key;
