--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -72,6 +72,7 @@ testDynamicIvs.rb
 ModuleTest.rb
 ErrnoTest.rb
 StructTest.rb
+TimeTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
