Add smoke test for find.rb

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -73,6 +73,7 @@ ModuleTest.rb
 ErrnoTest.rb
 StructTest.rb
 TimeTest.rb
+FindTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
@@ -87,3 +88,4 @@ Trac258.rb
 Trac260.rb
 Trac263.rb
 Trac265.rb
+Trac269.rb
