optimize uses of empty? . fixes to VcGlobals logic for trac276 . Add definiion of ARGF for trac225

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -74,6 +74,7 @@ ErrnoTest.rb
 StructTest.rb
 TimeTest.rb
 FindTest.rb
+InheritanceTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
@@ -89,3 +90,4 @@ Trac260.rb
 Trac263.rb
 Trac265.rb
 Trac269.rb
+Trac276.rb
