enable 2 more tests

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -22,7 +22,7 @@ testBlockArgs4.rb
 testBlockArgs5.rb
 testBlockArgs6.rb
 testBlockArgs7.rb
-# ReturnFromBlocksAndProcsTest.rb  # TODO fix lambda problems and uncomment
+ReturnFromBlocksAndProcsTest.rb
 testSend.rb
 ExprTest.rb
 # TODO: ForTest has   SexpParse No class for redo
@@ -97,3 +97,4 @@ Trac283.rb
 Trac284.rb
 Trac296.rb
 Trac299.rb
+Trac300.rb
