Added StringIOTest to vmunit.conf

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -75,6 +75,7 @@ StructTest.rb
 TimeTest.rb
 FindTest.rb
 InheritanceTest.rb
+StringIOTest.rb
 #SingletonTests.rb
 # Regression tests for fixed bugs
 Trac218.rb
