enable Singletone test, refactor testBlockArgs

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -15,13 +15,8 @@ testGlobals8.rb
 FixedRegressions.rb
 ArgsTest.rb
 ArrayTest.rb
-testBlockArgs1.rb
+testBlockArgs.rb
 testBlockArgs2.rb
-testBlockArgs3.rb
-testBlockArgs4.rb
-testBlockArgs5.rb
-testBlockArgs6.rb
-testBlockArgs7.rb
 ReturnFromBlocksAndProcsTest.rb
 testSend.rb
 ExprTest.rb
@@ -75,7 +70,7 @@ StructTest.rb
 TimeTest.rb
 FindTest.rb
 InheritanceTest.rb
-#SingletonTests.rb
+SingletonTests.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
