add lambda test, enable 304

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -17,6 +17,7 @@ ArgsTest.rb
 ArrayTest.rb
 testBlockArgs.rb
 testBlockArgs2.rb
+testLambdaArgs.rb
 ReturnFromBlocksAndProcsTest.rb
 testSend.rb
 ExprTest.rb
@@ -94,3 +95,4 @@ Trac284.rb
 Trac296.rb
 Trac299.rb
 Trac300.rb
+Trac304.rb
