Added test for persistence

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -73,6 +73,8 @@ FindTest.rb
 InheritanceTest.rb
 SingletonTests.rb
 StringIOTest.rb
+RubyContextTest.rb
+PersistenceTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
