Autoload support.  Requires MagLev-pbm.585.mcz

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -75,6 +75,7 @@ SingletonTests.rb
 StringIOTest.rb
 RubyContextTest.rb
 PersistenceTest.rb
+AutoloadTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
