--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -74,7 +74,7 @@ InheritanceTest.rb
 SingletonTests.rb
 StringIOTest.rb
 RubyContextTest.rb
-PersistenceTest.rb
+#PersistenceTest.rb
 AutoloadTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
