--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -76,6 +76,7 @@ StringIOTest.rb
 RubyContextTest.rb
 PersistenceTest.rb
 AutoloadTest.rb
+DefineMethod.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
