Get the Persistence test working again

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -74,7 +74,7 @@ InheritanceTest.rb
 SingletonTests.rb
 StringIOTest.rb
 RubyContextTest.rb
-#PersistenceTest.rb
+PersistenceTest.rb
 AutoloadTest.rb
 DefineMethod.rb
 # Regression tests for fixed bugs
