--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -77,6 +77,7 @@ RubyContextTest.rb
 PersistenceTest.rb
 AutoloadTest.rb
 DefineMethod.rb
+ThreadTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
