Add BindingTest and test for 325

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -78,6 +78,7 @@ PersistenceTest.rb
 AutoloadTest.rb
 DefineMethod.rb
 ThreadTest.rb
+BindingTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
@@ -101,3 +102,4 @@ Trac296.rb
 Trac299.rb
 Trac300.rb
 Trac304.rb
+Trac325.rb
