enable 335, add another singleton test

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -49,6 +49,7 @@ test_enumerable.rb
 FileTest.rb
 test_time.rb
 test_singleton.rb
+test_singleton2.rb
 StandardGlobalsTest.rb
 ObjectTest.rb
 SymbolTest.rb
@@ -106,3 +107,4 @@ Trac321.rb
 Trac325.rb
 Trac333.rb
 Trac334.rb
+Trac335.rb
