--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -80,6 +80,7 @@ AutoloadTest.rb
 DefineMethod.rb
 ThreadTest.rb
 BindingTest.rb
+NamespaceTest.rb
 # Regression tests for fixed bugs
 Trac218.rb
 Trac224.rb
@@ -108,3 +109,4 @@ Trac325.rb
 Trac333.rb
 Trac334.rb
 Trac335.rb
+Trac345.rb
