more test coverage

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -83,6 +83,7 @@ ThreadTest.rb
 BindingTest.rb
 NamespaceTest.rb
 # Regression tests for fixed bugs
+Trac86.rb
 Trac218.rb
 Trac224.rb
 Trac239.rb
@@ -115,3 +116,4 @@ Trac345.rb
 Trac346.rb
 Trac349.rb
 Trac352.rb
+Trac353.rb
