--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -106,6 +106,7 @@ Trac296.rb
 Trac299.rb
 Trac300.rb
 Trac304.rb
+Trac312.rb
 Trac321.rb
 Trac325.rb
 Trac328.rb
@@ -117,3 +118,4 @@ Trac346.rb
 Trac349.rb
 Trac352.rb
 Trac353.rb
+Trac355.rb
