coverage for send of :call using super

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -19,6 +19,7 @@ ArrayTest.rb
 testBlockArgs.rb
 testBlockArgs2.rb
 testLambdaArgs.rb
+testSuperCall.rb
 ReturnFromBlocksAndProcsTest.rb
 testSend.rb
 ExprTest.rb
