--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -13,7 +13,9 @@ testGlobals5.rb
 testGlobals6.rb
 testGlobals7.rb
 testGlobals8.rb
-FixedRegressions.rb
+testWhile.rb
+testUntil.rb
+testFor.rb
 ArgsTest.rb
 ArrayTest.rb
 testBlockArgs.rb
@@ -29,6 +31,7 @@ IfTest.rb
 PrecedTest.rb
 RegexpTest.rb
 WhileTest.rb
+ForTest.rb
 HashTest.rb
 PutsTest.rb
 #
@@ -37,10 +40,9 @@ testMassign.rb
 testProc.rb
 testBoolean.rb
 testExecString.rb
-testWhile.rb
-testUntil.rb
 testRaise.rb
 testCase.rb
+FixedRegressions.rb
 # TODO: testSystemExit.rb
 test_string_justification.rb
 test_string_misc.rb
