Added another test case to vmunit.conf

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -85,6 +85,7 @@ DefineMethod.rb
 ThreadTest.rb
 BindingTest.rb
 NamespaceTest.rb
+PopularApplications.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
