enable 363, 364. move PopularApplications to end of file

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -85,7 +85,6 @@ DefineMethod.rb
 ThreadTest.rb
 BindingTest.rb
 NamespaceTest.rb
-PopularApplications.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
@@ -126,3 +125,7 @@ Trac355.rb
 Trac355a.rb
 Trac356.rb
 Trac359.rb
+Trac363.rb
+Trac364.rb
+# PopularApplications loads webrick, etc 
+PopularApplications.rb
