--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -25,8 +25,6 @@ testSuperCall.rb
 ReturnFromBlocksAndProcsTest.rb
 testSend.rb
 ExprTest.rb
-# TODO: ForTest has   SexpParse No class for redo
-# ForTest.rb
 IfTest.rb
 PrecedTest.rb
 RegexpTest.rb
@@ -129,5 +127,6 @@ Trac363.rb
 Trac364.rb
 Trac369.rb
 Trac371.rb
+Trac372.rb
 # PopularApplications loads webrick, etc 
 PopularApplications.rb
