enable 375, testEvalLineNumber  tests

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -83,6 +83,7 @@ DefineMethod.rb
 ThreadTest.rb
 BindingTest.rb
 NamespaceTest.rb
+testEvalLineNumber.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
@@ -129,5 +130,7 @@ Trac369.rb
 Trac370.rb
 Trac371.rb
 Trac372.rb
+Trac374.rb
+Trac375.rb
 # PopularApplications loads webrick, etc 
 PopularApplications.rb
