adjust test for fixes 382, 383

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -133,5 +133,7 @@ Trac372.rb
 Trac374.rb
 Trac375.rb
 Trac381.rb
+Trac382.rb
+Trac383.rb
 # PopularApplications loads webrick, etc 
 PopularApplications.rb
