Added 1.8.6 p287 version of erb.rb and a smoke test

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -84,6 +84,7 @@ ThreadTest.rb
 BindingTest.rb
 NamespaceTest.rb
 testEvalLineNumber.rb
+ErbTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
