adjust tests for fixes 384, 385

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -4,6 +4,7 @@
 # TODO: resolve testFor.rb, testForEach.rb , may duplicate other tests
 # testFor.rb
 # testForEach.rb
+testInstVars.rb
 testGlobals1.rb
 testGlobals1a.rb
 testGlobals2.rb
@@ -137,5 +138,6 @@ Trac381.rb
 Trac382.rb
 Trac383.rb
 Trac384.rb
+Trac385.rb
 # PopularApplications loads webrick, etc 
 PopularApplications.rb
