Fix Trac391: Rational needed to_int, so added default impl in Numeric

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -141,6 +141,7 @@ Trac383.rb
 Trac384.rb
 Trac385.rb
 Trac390.rb
+Trac391.rb
 Trac392.rb
-# PopularApplications loads webrick, etc 
+# PopularApplications loads webrick, etc
 PopularApplications.rb
