Updated tests for better String#inspect impl

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -86,6 +86,7 @@ BindingTest.rb
 NamespaceTest.rb
 testEvalLineNumber.rb
 ErbTest.rb
+DigestTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
