--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "spec/rubyspec"]
 	path = spec/rubyspec
 	url = git://github.com/rubyspec/rubyspec.git
+[submodule "benchmark"]
+	path = benchmark
+	url = git://github.com/acangiano/ruby-benchmark-suite.git
