--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -87,6 +87,7 @@ NamespaceTest.rb
 testEvalLineNumber.rb
 ErbTest.rb
 DigestTest.rb
+ZlibTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
@@ -145,6 +146,5 @@ Trac390.rb
 Trac391.rb
 Trac392.rb
 Trac393.rb
-Trac430.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
