--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -89,6 +89,7 @@ testEvalLineNumber.rb
 ErbTest.rb
 DigestTest.rb
 ZlibTest.rb
+testMarshal.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
