--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -88,8 +88,8 @@ NamespaceTest.rb
 testEvalLineNumber.rb
 ErbTest.rb
 DigestTest.rb
-ZlibTest.rb
 testMarshal.rb
+ZlibTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
@@ -148,6 +148,9 @@ Trac390.rb
 Trac391.rb
 Trac392.rb
 Trac393.rb
+Trac425.rb
 Trac432.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
+# need to have the smalltalk wrappers generated for SmalltalkFFITest
+SmalltalkFFITest.rb
