Added Trac447.rb to vmunit.conf

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -150,6 +150,7 @@ Trac392.rb
 Trac393.rb
 Trac425.rb
 Trac432.rb
+Trac447.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
