--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -150,6 +150,9 @@ Trac392.rb
 Trac393.rb
 Trac425.rb
 Trac432.rb
+Trac435.rb
+Trac438.rb
+Trac450.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
