--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -152,8 +152,11 @@ Trac425.rb
 Trac432.rb
 Trac435.rb
 Trac438.rb
+Trac440.rb
+Trac445.rb
 Trac447.rb
 Trac450.rb
+Trac454.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
