--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -158,6 +158,7 @@ Trac445.rb
 Trac447.rb
 Trac450.rb
 Trac454.rb
+Trac462.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
