Add test case for Trac 464

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -159,6 +159,7 @@ Trac447.rb
 Trac450.rb
 Trac454.rb
 Trac462.rb
+Trac464.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
