Trac 502: Fixed, and made good progress on Array#fill specs

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -160,6 +160,7 @@ Trac450.rb
 Trac454.rb
 Trac462.rb
 Trac464.rb
+Trac502.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
