--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -161,6 +161,7 @@ Trac454.rb
 Trac462.rb
 Trac464.rb
 Trac502.rb
+Trac504.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
