Fix Trac 506: File.new needed better error messages.

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -164,6 +164,7 @@ Trac500.rb
 Trac501.rb
 Trac502.rb
 Trac504.rb
+Trac506.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
