--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -163,9 +163,11 @@ Trac464.rb
 Trac486.rb
 Trac496.rb
 Trac498.rb
+Trac499.rb
 Trac500.rb
 Trac501.rb
 Trac502.rb
+Trac503.rb
 Trac504.rb
 Trac506.rb
 Trac507.rb
