--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -171,6 +171,7 @@ Trac503.rb
 Trac504.rb
 Trac506.rb
 Trac507.rb
+Trac512.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
