--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,4 @@ lib/ruby/site_ruby/1.8/ubygems.rb
 lib/ruby/site_ruby/1.8/rbconfig
 lib/ruby/site_ruby/1.8/smalltalk
 stones
-
+examples/persistence/gstore/pstore.db
