--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -41,7 +41,6 @@ class_vars.rb
 classes_simple.rb
 RubyContextTest.rb
 DefineMethod.rb
-BindingTest.rb
 NamespaceTest.rb
 #  RP not biasing line numbers yet because using byte offsets...
 # testEvalLineNumber.rb
@@ -70,6 +69,8 @@ SymbolTest.rb
 FileStatTest.rb
 EnvTest.rb
 DirTest.rb
+testHeredoc.rb
+BindingTest.rb
 #
 test_require.rb
 ClassTest.rb
@@ -175,6 +176,7 @@ Trac506.rb
 Trac507.rb
 Trac512.rb
 Trac514.rb
+Trac525.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
