--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -177,6 +177,8 @@ Trac507.rb
 Trac512.rb
 Trac514.rb
 Trac525.rb
+Trac533.rb
+Trac539.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
