--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -178,6 +178,7 @@ Trac514.rb
 Trac525.rb
 Trac533.rb
 Trac539.rb
+Trac543.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
