--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -175,10 +175,12 @@ Trac506.rb
 Trac507.rb
 Trac512.rb
 Trac514.rb
+Trac516.rb
 Trac525.rb
 Trac533.rb
 Trac539.rb
 Trac543.rb
+Trac546.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
