--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -180,6 +180,7 @@ Trac533.rb
 Trac539.rb
 Trac543.rb
 Trac546.rb
+Trac555.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
