enable test for 561

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -181,6 +181,7 @@ Trac539.rb
 Trac543.rb
 Trac546.rb
 Trac555.rb
+Trac561.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
