--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -182,6 +182,7 @@ Trac543.rb
 Trac546.rb
 Trac555.rb
 Trac561.rb
+Trac569.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
