Fix writing of symbols.  Trac574.rb now passes

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -183,6 +183,7 @@ Trac546.rb
 Trac555.rb
 Trac561.rb
 Trac569.rb
+Trac574.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
