--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -183,6 +183,8 @@ Trac546.rb
 Trac555.rb
 Trac561.rb
 Trac569.rb
+Trac570.rb
+Trac572.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
