--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -182,6 +182,7 @@ Trac539.rb
 Trac543.rb
 Trac546.rb
 Trac555.rb
+Trac560b.rb
 Trac561.rb
 Trac569.rb
 Trac570.rb
@@ -189,6 +190,7 @@ Trac572.rb
 Trac574.rb
 Trac575.rb
 Trac576.rb
+Trac578.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
