--- a/etc/system.conf
+++ b/etc/system.conf
@@ -15,7 +15,7 @@
 #  name is appended to the directory name WITHOUT an intervening delimiter,
 #  so a trailing delimiter is necessary here.
 # Default: $GEMSTONE/data/
-DBF_SCRATCH_DIR = $MAGLEV_HOME/data/;
+DBF_SCRATCH_DIR = $GEMSTONE_DATADIR/extent/scratch.;
 
 #=========================================================================
 # DUMP_OPTIONS:  Dump summary of all configuration options applicable to
@@ -118,9 +118,9 @@ STN_HALT_ON_FATAL_ERR = FALSE;
 # are provided.
 #=========================================================================
 
-DBF_EXTENT_NAMES = $MAGLEV_HOME/data/extent0.ruby.dbf;
+DBF_EXTENT_NAMES = $GEMSTONE_DATADIR/extent/extent0.ruby.dbf;
 STN_TRAN_FULL_LOGGING = FALSE;
-STN_TRAN_LOG_DIRECTORIES = $MAGLEV_HOME/data/, $MAGLEV_HOME/data/;
+STN_TRAN_LOG_DIRECTORIES = $GEMSTONE_DATADIR/tranlog/, $GEMSTONE_DATADIR/tranlog/;
 STN_TRAN_LOG_SIZES = 100, 100;
 
 #=========================================================================
