--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -191,6 +191,8 @@ Trac574.rb
 Trac575.rb
 Trac576.rb
 Trac578.rb
+Trac580.rb
+Trac584.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
