--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -193,6 +193,7 @@ Trac576.rb
 Trac578.rb
 Trac580.rb
 Trac584.rb
+Trac587.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
