--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -194,6 +194,9 @@ Trac578.rb
 Trac580.rb
 Trac584.rb
 Trac587.rb
+Trac588.rb
+Trac589.rb
+Trac590.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
