Fix problem with NoEmethodError#inspect.  Added test case and added test_exception.rb to vmunit.conf

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -60,6 +60,7 @@ test_string_tr.rb
 test_string_updowncase.rb
 test_stringcount.rb
 test_enumerable.rb
+test_exception.rb
 FileTest.rb
 test_time.rb
 StandardGlobalsTest.rb
