Fix Trac 592, and update test case: puts of arrays was broken.

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -198,6 +198,7 @@ Trac587.rb
 Trac588.rb
 Trac589.rb
 Trac590.rb
+Trac592.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
