Add tag support to sinatra blog

--- a/examples/sinatra/simple_blog/Rakefile
+++ b/examples/sinatra/simple_blog/Rakefile
@@ -1,6 +1,7 @@
 
 desc "Commit the base blog code to the repository"
 task :commit do
-  sh %{ maglev-ruby commit_code.rb }
+  sh %{ maglev-ruby -MnoRlwrap commit_code.rb }
 end
+
 
