--- a/examples/sinatra/simple_blog/Rakefile
+++ b/examples/sinatra/simple_blog/Rakefile
@@ -1,17 +1,32 @@
+# Rake file for running sinatra apps and committing code to maglev.
+# Default is to commit code (if necessary) and run both apps
+
+task :default => :both
 
 desc "Commit the base blog code to the repository."
 task :commit, :force do |t,args|
   sh %{ maglev-ruby -MnoRlwrap commit_code.rb #{args.force} }
 end
 
-desc "Commit the code and run the app"
-task :run => :commit do
+desc "Run both apps (blog, objectlog), committing the blog code if necessary."
+task :both => :commit do
   sh %{ $MAGLEV_HOME/bin/rackup }
 end
 
-"Run tets: requires rubygems installed and a p patched minitest gem"
+desc "Run the objectlog app standalone."
+task :objectlog  do
+  sh %{ $MAGLEV_HOME/bin/rackup objectlog.ru }
+end
+
+desc "Run the blog app standalone, committing the blog code if necessary"
+task :blog => :commit do
+  sh %{ $MAGLEV_HOME/bin/rackup blog.ru }
+end
+
+"Run tets: requires rubygems installed and a patched minitest gem"
 task :tests => :commit do
   Dir.glob("test/*_tests.rb") do |t|
     sh %{ unset MAGLEV_OPTS ; maglev-ruby -MnoRlwrap #{t} }
   end
 end
+
