Fix sinatra app tests

--- a/examples/sinatra/simple_blog/Rakefile
+++ b/examples/sinatra/simple_blog/Rakefile
@@ -26,7 +26,7 @@ end
 "Run tets: requires rubygems installed and a patched minitest gem"
 task :tests => :commit do
   Dir.glob("test/*_tests.rb") do |t|
-    sh %{ unset MAGLEV_OPTS ; maglev-ruby -MnoRlwrap #{t} }
+    sh %{ maglev-ruby -MnoRlwrap #{t} }
   end
 end
 
