--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 /gemstone/
 /locks/
 /log/
-/stones/
 gemstone.old/
 debugspec.inp
 cur.inp
@@ -24,5 +23,6 @@ etc/maglev.demo.key
 version.txt
 pbm.rb
 lib/ruby/site_ruby/1.8/smalltalk
+lib/maglev/gems
 examples/persistence/gstore/pstore.db
 bin/rake
