--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -202,6 +202,7 @@ Trac589.rb
 Trac590.rb
 Trac591.rb
 Trac592.rb
+Trac607.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
