Set DUMP_OPTIONS to true, and modified maglev script to grep for the important parts for the interactive user.

--- a/etc/system.conf
+++ b/etc/system.conf
@@ -23,7 +23,7 @@ DBF_SCRATCH_DIR = $GEMSTONE_DATADIR/extent/scratch.;
 #
 #  Used by all executables.
 # Default: TRUE
-DUMP_OPTIONS = FALSE;
+# DUMP_OPTIONS = TRUE;
 
 #=========================================================================
 # GEM_MAX_SMALLTALK_STACK_DEPTH
@@ -135,4 +135,5 @@ STN_TRAN_LOG_SIZES = 100, 100;
 GEM_MAX_SMALLTALK_STACK_DEPTH = 15000;
 GEM_TEMPOBJ_SCOPES_SIZE = 20000;
 GEM_TEMPOBJ_CACHE_SIZE = 500000;
+SHR_PAGE_CACHE_SIZE_KB = 500000;
 KEYFILE = $MAGLEV_HOME/etc/maglev.demo.key;
