Set STN_TRAN_FULL_LOGGING = FALSE in etc/system.conf which is used for sanctioned build. That way the end user can choose either. If the sanctioned build uses FULL_LOGGING mode, you have to backup/restore before you can run in PARTIAL_LOGGING mode.

--- a/etc/system.conf
+++ b/etc/system.conf
@@ -119,7 +119,7 @@ STN_HALT_ON_FATAL_ERR = FALSE;
 #=========================================================================
 
 DBF_EXTENT_NAMES = $GEMSTONE_DATADIR/extent/extent0.ruby.dbf;
-STN_TRAN_FULL_LOGGING = TRUE;
+STN_TRAN_FULL_LOGGING = FALSE;
 STN_TRAN_LOG_DIRECTORIES = $GEMSTONE_DATADIR/tranlog/, $GEMSTONE_DATADIR/tranlog/;
 STN_TRAN_LOG_SIZES = 100, 100;
 
