--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -204,6 +204,7 @@ Trac590.rb
 Trac591.rb
 Trac592.rb
 Trac607.rb
+Trac609.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
