Add new tests and fix one old one.  The identity set test is not yet turned on

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -94,6 +94,8 @@ ZlibTest.rb
 IOTest.rb
 RandomTest.rb
 CallerTest.rb
+EnumerableTest.rb
+#IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
