More clean up of cruft in src/test

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -42,6 +42,7 @@ classes_simple.rb
 RubyContextTest.rb
 DefineMethod.rb
 NamespaceTest.rb
+CaseTest.rb
 #  RP not biasing line numbers yet because using byte offsets...
 # testEvalLineNumber.rb
 testMarshal.rb
@@ -71,7 +72,6 @@ EnvTest.rb
 DirTest.rb
 testHeredoc.rb
 BindingTest.rb
-#
 test_require.rb
 ClassTest.rb
 RbConfigTest.rb
@@ -95,7 +95,8 @@ IOTest.rb
 RandomTest.rb
 CallerTest.rb
 EnumerableTest.rb
-#IdentitySetIndexingTest.rb
+testTopSelf.rb
+# IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
