--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -205,6 +205,7 @@ Trac591.rb
 Trac592.rb
 Trac607.rb
 Trac609.rb
+Trac611.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
