--- a/src/experimental/mdb/mdb/Rakefile
+++ b/src/experimental/mdb/mdb/Rakefile
@@ -5,9 +5,13 @@ MAGLEV_CMD = "MAGLEV_OPTS= maglev-ruby"
 
 ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
 
+# desc "Commit the MDB Server code to the repository."
+# task :commit, :force do |t,args|
+#   sh %{ maglev-ruby commit_code.rb #{args.force} }
+# end
 desc "Commit the MDB Server code to the repository."
-task :commit, :force do |t,args|
-  sh %{ maglev-ruby commit_code.rb #{args.force} }
+task :commit do
+  sh %{ maglev-ruby commit_code.rb }
 end
 
 desc "Run tets: requires rubygems installed and a patched minitest gem"
@@ -18,9 +22,17 @@ task :test => :commit do
   end
 end
 
-namespace :db do
+# These tasks control the RESTful mdb_server.rb Sinatra app
+namespace :mdb do
+  desc "Start the mdb_server app"
+  task :start do
+    sh %{ $MAGLEV_HOME/bin/rackup server.ru }
+  end
+
   desc "List the databases in the server"
   task :list do
-    sh %{ maglev-ruby -e 'p Maglev::PERSISTENT_ROOT[MDB::Server]' }
+    sh %{ maglev-ruby -e 'p MDB::Server.db_names' }
   end
+
 end
+
