--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -209,6 +209,7 @@ Trac592.rb
 Trac607.rb
 Trac609.rb
 Trac611.rb
+Trac613.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
