More work on MDB

--- a/src/experimental/mdb/app/Rakefile
+++ b/src/experimental/mdb/app/Rakefile
@@ -3,9 +3,14 @@ task :default => :'app:run'
 ENV['MAGLEV_OPTS'] = '-MnoRlwrap'
 
 desc "Run tests on the application model"
-task :test do
+task :test => :test_fixtures do
   test_files = Dir.glob('test/*_tests.rb')
   sh %{ maglev-ruby -Ilib -Itest #{test_files} }
+end
+
+# Commit the test fixture model code needed by tests into the Maglev server
+task :test_fixtures do
+  sh %{ maglev-ruby -Itest test/mdb_fixtures.rb }
 end
 # These tasks control the Sinatra application
 namespace :app do
