First round of app tests work through MDB::REST*

--- a/src/experimental/mdb/app/Rakefile
+++ b/src/experimental/mdb/app/Rakefile
@@ -5,12 +5,15 @@ ENV['MAGLEV_OPTS'] = '-MnoRlwrap'
 desc "Run tests on the application model"
 task :test => :test_fixtures do
   test_files = Dir.glob('test/*_tests.rb')
-  sh %{ maglev-ruby -Ilib -Itest #{test_files} }
+  sh %{ ruby -Ilib -Itest #{test_files} }
 end
 
 # Commit the test fixture model code needed by tests into the Maglev server
 task :test_fixtures do
+  # TODO: should probably also run ../mdb/ rake commit
+  puts "-- Loading test fixtures into maglev"
   sh %{ maglev-ruby -Itest test/mdb_fixtures.rb }
+  puts "-- (done)"
 end
 # These tasks control the Sinatra application
 namespace :app do
