Exposed shared persistent counters to ruby

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -96,6 +96,7 @@ RandomTest.rb
 CallerTest.rb
 EnumerableTest.rb
 testTopSelf.rb
+PersistentCounterTest.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
