--- a/src/experimental/mdb/mdb/Rakefile
+++ b/src/experimental/mdb/mdb/Rakefile
@@ -22,7 +22,7 @@ namespace :test do
 
   desc "Run the mdb_server tests."
   task :mdb_server => :commit do
-    sh 'maglev-ruby test/mdb_server_tests.rb'
+    sh 'maglev-ruby -Itest test/mdb_server_tests.rb'
   end
 
   desc "Run the MDB::* tests."
