Updates for Pathname problem

--- a/src/experimental/mdb/mdb/Rakefile
+++ b/src/experimental/mdb/mdb/Rakefile
@@ -1,6 +1,6 @@
 task :default => :commit
 
-ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
+ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib -d'   # Get rid of -d etc.
 
 # desc "Commit the MDB Server code to the repository."
 # task :commit, :force do |t,args|
@@ -8,6 +8,7 @@ ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
 # end
 desc "Commit the MDB Server code to the repository."
 task :commit do
+  puts "====================== TASK: commit ===================="
   sh %{ maglev-ruby commit_code.rb }
 end
 
@@ -21,15 +22,22 @@ namespace :test do
   end
 
   desc "Run the mdb_server tests."
-  task :mdb_server => :commit do
+  task :mdb_server => [:commit, :fixtures] do
     sh 'maglev-ruby -Itest test/mdb_server_tests.rb'
   end
 
   desc "Run the MDB::* tests."
   task :mdb => :commit do
+    puts "====================== TASK: mdb ===================="
     ['database_tests.rb', 'server_tests.rb'].each do |test|
+      puts "====================== #{test} ===================="
       sh %{ maglev-ruby -Itest test/#{test} }
     end
+  end
+
+  desc "Commit the test fixtures"
+  task :fixtures do
+    sh %{ maglev-ruby test/app_model.rb }
   end
 end
 
