--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -162,6 +162,7 @@ Trac438.rb
 Trac440.rb
 Trac445.rb
 Trac447.rb
+Trac449.rb
 Trac450.rb
 Trac454.rb
 Trac462.rb
@@ -211,6 +212,7 @@ Trac609.rb
 Trac611.rb
 Trac612.rb
 Trac613.rb
+Trac616.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
